Fix: Break on all

--- a/src/InfiniLore.InfiniBlazor/wwwroot/InfiniBlazor.css
+++ b/src/InfiniLore.InfiniBlazor/wwwroot/InfiniBlazor.css
@@ -1321,6 +1321,9 @@
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
   }
+  .break-all {
+    word-break: break-all;
+  }
   .whitespace-nowrap {
     white-space: nowrap;
   }
